changes for the swagger anotation
